--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
             </div>
         </div>
+<!-- this section describes the cart section -->
 
         <div class="cart">
             <div class="airbnb-home">Airbnb your home</div>
